<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <include layout="@layout/toolbar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title_restaurant"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_margin="12dp"
                android:textColor="@color/colorPrimaryDark"/>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                app:cardCornerRadius="50dp">
                <com.example.oleg.restaurants.customview.ImageWIthRatingView
                    android:layout_margin="12dp"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:id="@+id/thumb_restaurant"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                app:cardCornerRadius="20dp"
                android:layout_margin="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="12dp"
                        android:columnCount="2">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:text="@string/priceRating"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/price_rating"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:text="@string/average_cost_for_two"/>
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/average_cost" />
                    </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_menu"
                app:cardCornerRadius="20dp"
                android:layout_margin="12dp">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <Button
                        android:layout_margin="12dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/menu"
                        android:id="@+id/button_menu"/>
                    <Button
                        android:layout_margin="12dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/photos"
                        android:id="@+id/button_photos"/>
                    <Button
                        android:layout_margin="12dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/url_restaurant"
                        android:id="@+id/button_url_restaurant"/>
                    <Button android:layout_margin="12dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_notify"
                        android:text="@string/notify_me" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:id="@+id/word_address"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/address"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/city_restaurant"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/locality"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/locality_restaurant"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>